--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<title>Fitness Mobile Game</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://kit.fontawesome.com/830035c582.js" crossorigin="anonymous"></script>
+
+<head>
+  <title>Fitness Mobile Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/830035c582.js" crossorigin="anonymous"></script>
+</head>
 
 <style>
   body,
@@ -39,7 +42,8 @@
       onclick="document.getElementById('download').style.display='block'">Download <i class="fa fa-android"></i>
     </button>
     <div class="mySlides w3-animate-opacity">
-      <img class="w3-image" src="./w3images/introBG.jpg" alt="Image 1" style="min-width:500px" width="1500" height="1000">
+      <img class="w3-image" src="./w3images/introBG.jpg" alt="Image 1" style="min-width:500px" width="1500"
+        height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
           <h1 class="w3-xlarge">Lead a Healthy life with our app</h1>
@@ -52,7 +56,8 @@
       </div>
     </div>
     <div class="mySlides w3-animate-opacity">
-      <img class="w3-image" src="./w3images/emotionBG.jpg" alt="Image 2" style="min-width:500px" width="1500" height="1000">
+      <img class="w3-image" src="./w3images/emotionBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
+        height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
           <h1 class="w3-xlarge">Emotion Tracking</h1>
@@ -65,7 +70,8 @@
       </div>
     </div>
     <div class="mySlides w3-animate-opacity">
-      <img class="w3-image" src="./w3images/lifestyleBG.jpg" alt="Image 3" style="min-width:500px" width="1500" height="1000">
+      <img class="w3-image" src="./w3images/lifestyleBG.jpg" alt="Image 3" style="min-width:500px" width="1500"
+        height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
           <h1 class="w3-xlarge">Lifestyle Tracking</h1>
@@ -78,7 +84,8 @@
       </div>
     </div>
     <div class="mySlides w3-animate-opacity">
-      <img class="w3-image" src="./w3images/dietBG.jpg" alt="Image 2" style="min-width:500px" width="1500" height="1000">
+      <img class="w3-image" src="./w3images/dietBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
+        height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
           <h1 class="w3-xlarge w3-text-red">Dynamic Diet Generation</h1>
@@ -149,7 +156,7 @@
       <div class="w3-col l8 m6">
         <h1 class="w3-jumbo"><b>Become Healthy</b></h1>
         <h2 class="w3-xxxlarge w3-text-red"><b>The Best App To Maintain Your Health</b></h2>
-        <p><span class="w3-xlarge">Making use of modern technologies.</span> 
+        <p><span class="w3-xlarge">Making use of modern technologies.</span>
           Uses Machine Learning in order to accurately track your details. Giving you the best experience ever
         </p>
       </div>
