--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <button class="w3-button w3-block w3-green w3-hide-large w3-hide-medium"
       onclick="document.getElementById('download').style.display='block'">Download <i class="fa fa-android"></i>
     </button>
-    <div class="mySlides w3-animate-opacity">
+    <div class="mySlides w3-animate-fading">
       <img class="w3-image" src="./w3images/introBG.jpg" alt="Image 1" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <div class="mySlides w3-animate-opacity">
+    <div class="mySlides w3-animate-fading">
       <img class="w3-image" src="./w3images/emotionBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-    <div class="mySlides w3-animate-opacity">
+    <div class="mySlides w3-animate-fading">
       <img class="w3-image" src="./w3images/lifestyleBG.jpg" alt="Image 3" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
@@ -84,7 +84,7 @@
         </div>
       </div>
     </div>
-    <div class="mySlides w3-animate-opacity">
+    <div class="mySlides w3-animate-fading">
       <img class="w3-image" src="./w3images/dietBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
@@ -98,10 +98,6 @@
         </div>
       </div>
     </div>
-    <a class="w3-button w3-black w3-display-right w3-margin-right w3-round w3-hide-small w3-hover-light-grey"
-      onclick="plusDivs(1)">Take Tour <i class="fa fa-angle-right"></i></a>
-    <a class="w3-button w3-block w3-black w3-hide-large w3-hide-medium" onclick="plusDivs(1)">Take Tour <i
-        class="fa fa-angle-right"></i></a>
   </header>
 
   <!-- The App Section -->
@@ -266,21 +262,22 @@
   <script>
     // Slideshow
     var slideIndex = 1;
-    showDivs(slideIndex);
+    showDivs();
 
     function plusDivs(n) {
-      showDivs(slideIndex += n);
+      showDivs();
     }
 
-    function showDivs(n) {
+    function showDivs() {
       var i;
       var x = document.getElementsByClassName("mySlides");
-      if (n > x.length) { slideIndex = 1 }
-      if (n < 1) { slideIndex = x.length }
+      if (slideIndex > x.length) { slideIndex = 1 }
       for (i = 0; i < x.length; i++) {
         x[i].style.display = "none";
       }
       x[slideIndex - 1].style.display = "block";
+      slideIndex++;
+      setTimeout(showDivs, 9000);
     }
   </script>
 
