--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       onclick="document.getElementById('download').style.display='block'">Download <i class="fa fa-android"></i>
     </button>
     <div class="mySlides w3-animate-fading">
-      <img class="w3-image" src="./w3images/introBG.jpg" alt="Image 1" style="min-width:500px" width="1500"
+      <img class="w3-image" src="./images/introBG.jpg" alt="Image 1" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="mySlides w3-animate-fading">
-      <img class="w3-image" src="./w3images/emotionBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
+      <img class="w3-image" src="./images/emotionBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="mySlides w3-animate-fading">
-      <img class="w3-image" src="./w3images/lifestyleBG.jpg" alt="Image 3" style="min-width:500px" width="1500"
+      <img class="w3-image" src="./images/lifestyleBG.jpg" alt="Image 3" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div class="mySlides w3-animate-fading">
-      <img class="w3-image" src="./w3images/dietBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
+      <img class="w3-image" src="./images/dietBG.jpg" alt="Image 2" style="min-width:500px" width="1500"
         height="1000">
       <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
         <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
@@ -116,13 +116,13 @@
         </button>
       </div>
       <div class="w3-col l4 m6">
-        <img src="./w3images/img_app.jpg" class="w3-image w3-right w3-hide-small" width="335" height="471">
+        <img src="./images/img_app.jpg" class="w3-image w3-right w3-hide-small" width="335" height="471">
         <div class="w3-center w3-hide-large w3-hide-medium">
           <button class="w3-button w3-block w3-padding-large"
             onclick="document.getElementById('download').style.display='block'">
             <i class="fa fa-download"></i> Download Application
           </button>
-          <img src="./w3images/img_app.jpg" class="w3-image w3-margin-top" width="335" height="471">
+          <img src="./images/img_app.jpg" class="w3-image w3-margin-top" width="335" height="471">
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
   <div class="w3-padding-64 w3-light-grey">
     <div class="w3-row-padding">
       <div class="w3-col l4 m6">
-        <img class="w3-image w3-round-large w3-hide-small" src="./w3images/app5.jpg" alt="App" width="335" height="471">
+        <img class="w3-image w3-round-large w3-hide-small" src="./images/app5.jpg" alt="App" width="335" height="471">
       </div>
       <div class="w3-col l8 m6">
         <h1 class="w3-jumbo"><b>Become Healthy</b></h1>
