updated images and description

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
   </header>
 
-  <!-- The App Section -->
+  <!-- Overall Section -->
   <div class="w3-padding-64 w3-white">
     <div class="w3-row-padding">
       <div class="w3-col l8 m6">
@@ -108,53 +108,72 @@
         <h1 class="w3-xxxlarge w3-text-green"><b>Why use it?</b></h1>
         <p><span class="w3-xlarge">Introducing the only fitness app you need.</span>
           The app that helps you lead a healthy life by monitoring your emotions, lifestyle and calories.
-          By analyzing this data, the can adapt to you. Giving you a personalized fitness experience like no other
+          By analyzing this data, the can adapt to you. Giving you a personalized fitness experience like no other.
+		  <br/><br/>
+		  Using Machine Learning this app represents a new way to maintain your fitness and health. 
+		  <br/>
+		  Respects your privacy by storing all the data locally, server is only used to make the prediction.
+		  <br/><br/>
+		  Keep Scrolling to learn more
         </p>
-        <button class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"
-          onclick="document.getElementById('download').style.display='block'">
-          <i class="fa fa-download"></i> Download Application
-        </button>
       </div>
       <div class="w3-col l4 m6">
-        <img src="./images/img_app.jpg" class="w3-image w3-right w3-hide-small" width="335" height="471">
-        <div class="w3-center w3-hide-large w3-hide-medium">
-          <button class="w3-button w3-block w3-padding-large"
-            onclick="document.getElementById('download').style.display='block'">
-            <i class="fa fa-download"></i> Download Application
-          </button>
-          <img src="./images/img_app.jpg" class="w3-image w3-margin-top" width="335" height="471">
-        </div>
+        <img src="./images/app5.jpg" class="w3-image w3-right w3-hide-small" width="335" height="471">
       </div>
     </div>
   </div>
 
-  <!-- Modal -->
-  <div id="download" class="w3-modal w3-animate-opacity">
-    <div class="w3-modal-content" style="padding:32px">
-      <div class="w3-container w3-white">
-        <i onclick="document.getElementById('download').style.display='none'"
-          class="fa fa-remove w3-xlarge w3-button w3-transparent w3-right w3-xlarge"></i>
-        <h2 class="w3-wide">DOWNLOAD</h2>
-        <p>Download the app in the Google Play Store.</p>
-        <i class="fa fa-android w3-large"></i>
-        <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
-        <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom"
-          onclick="document.getElementById('download').style.display='none'">Download</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Clarity Section -->
+  <!-- Indivual Details Section -->
+  
   <div class="w3-padding-64 w3-light-grey">
     <div class="w3-row-padding">
       <div class="w3-col l4 m6">
-        <img class="w3-image w3-round-large w3-hide-small" src="./images/app5.jpg" alt="App" width="335" height="471">
+        <img class="w3-image w3-round-large w3-hide-small" src="./images/game.jpg" alt="App" width="335" height="471">
       </div>
       <div class="w3-col l8 m6">
-        <h1 class="w3-jumbo"><b>Become Healthy</b></h1>
-        <h2 class="w3-xxxlarge w3-text-red"><b>The Best App To Maintain Your Health</b></h2>
-        <p><span class="w3-xlarge">Making use of modern technologies.</span>
-          Uses Machine Learning in order to accurately track your details. Giving you the best experience ever
+        <h1 class="w3-jumbo"><b>Emotion Tracking</b></h1>
+        <h2 class="w3-xxxlarge w3-text-blue"><b>Captures your face via the Camera</b></h2>
+        <p><span class="w3-xlarge">Making use of modern technologies,</span>
+          The Facial extraction system helps to adjust the difficulty of the mobile game according to the user's emotions. 
+		  <br/>
+		  The emotion extraction part can extract the user's emotion using the camera and a neural network while the user plays the game,
+		  without interrupting the game.
+        </p>
+      </div>
+    </div>
+  </div>
+  
+<div class="w3-padding-64 w3-light-grey">
+    <div class="w3-row-padding">
+      <div class="w3-col l8 m6">
+        <h1 class="w3-jumbo"><b>Lifestyle Tracking</b></h1>
+        <h2 class="w3-xxxlarge w3-text-teal"><b>Uses smartwatch to identify your activities</b></h2>
+        <p><span class="w3-xlarge">By monitoring the accelerometer of the smartWatch,</span>
+          the app can use this data in order to predict your activities.
+		  By processing these activities the app can identify any unhealthy health practices. 
+		  <br/>
+		  Once an unhealthy practice is noticed, the app will send you a notification. 
+		  So you can get rid of these unhealthy practices and maintain your long-term health.
+        </p>
+      </div>
+	  <div class="w3-col l4 m6">
+	  <img class="w3-image w3-right w3-round-large w3-hide-small" src="./images/lifestyle.jpg" alt="App" width="335" height="471">
+    </div>
+  </div>
+  
+<div class="w3-padding-64 w3-light-grey">
+    <div class="w3-row-padding">
+      <div class="w3-col l4 m6">
+        <img class="w3-image w3-round-large w3-hide-small" src="./images/diet.jpg" alt="App" width="335" height="471">
+      </div>
+      <div class="w3-col l8 m6">
+        <h1 class="w3-jumbo"><b>Diet Tracking</b></h1>
+        <h2 class="w3-xxxlarge w3-text-purple"><b>Just take a picture of your Food</b></h2>
+        <p><span class="w3-xlarge">Identifies the calories of the food </span>
+          and will generate a diet plan for you. The diet plan will dynamically adjust according to your behaviour and food intake.
+		  <br/>
+		  Will work in conjunction with your BMI readings, assisting you in maintaining your health. 
+		  In case you deviate from the given diet plan, the app will take those calories into consideration and update your plan.
         </p>
       </div>
     </div>
@@ -232,7 +251,7 @@
           <li class="w3-padding-16"><b>No</b> Ads</li>
           <li class="w3-padding-16"><b>Endless</b> Support</li>
           <li class="w3-padding-16">
-            <h2 class="w3-opacity">$ 5 per month</h2>
+            <h2 class="w3-opacity">$ 2.99 per month</h2>
           </li>
           <li class="w3-light-grey w3-padding-24">
             <button class="w3-button w3-black w3-padding-large"
